--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jwtoken": "^0.0.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "path": "^0.12.7",
     "pg": "^8.13.1",
